--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
     <div id="masterLayer2_Container" style="width:1300px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
         <div id="wb_logovime" style="position:absolute;left:50px;top:14px;width:300px;height:98px;z-index:7;">
             <a href="./index.html"><img src="images/Vime_logo.png" id="logovime" alt="VIME - Cl&#237;nica para bajar de peso"></a></div>
-        <div id="wb_masterCssMenu1" style="position:absolute;left:518px;top:84px;width:740px;height:28px;z-index:8;">
+        <div id="wb_masterCssMenu1" style="position:absolute;left:518px;top:84px;width:800px;height:28px;z-index:8;">
             <ul>
                 <li class="firstmain"><a href="./index.html" target="_self">Inicio</a>
                 </li>
-                <li><a class="active" href="./quien-somos.html" target="_self">Acerca&nbsp;de&nbsp;VIME</a>
+                <li><a href="./quien-somos.html" target="_self">Acerca&nbsp;de&nbsp;VIME</a>
                 </li>
                 <li><a href="./tratamiento-bajar-peso.html" target="_self">Tratamiento</a>
                 </li>
                 <li><a href="./herramientas.html" target="_self">Herramientas</a>
+                </li>
+                <li><a href="./pagos.html" target="_self" class="active">Pagos</a>
                 </li>
                 <li><a href="./contacto.html" target="_self">Contacto/Ubicaci&#243;n</a>
                 </li>
@@ -88,7 +90,7 @@
     <div class="bkng-tb-cntnt" ng-controller="paymentsController as ctrl">
 
         <div class="pymnts">
-            <form action="" method="POST" id="payment-form" ng-if="!ctrl.showSuccess">
+            <form action="" method="POST" id="payment-form" name="ctrl.paymentForm" ng-if="!ctrl.showSuccess">
                 <input type="hidden" name="token_id" id="token_id">
                 <input type="hidden" name="payment_option" id="payment_option">
 
@@ -98,21 +100,35 @@
                     <div class="sctn-row">
                         <div class="sctn-col l">
                             <label>Nombre</label>
-                            <input type="text" name="name" ng-model="ctrl.customer.name" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }">
+                            <input type="text" name="name" ng-model="ctrl.customer.name" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }" required>
+                            <div ng-messages="ctrl.paymentForm.name.$error" ng-if="ctrl.paymentForm.name.$touched" md-auto-hide="false">
+                                <div ng-message="required" class="error-message">Este campo es requerido</div>
+                            </div>
                         </div>
                         <div class="sctn-col">
                             <label>Apellidos</label>
-                            <input type="text" name="last_name" ng-model="ctrl.customer.lastName" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }">
+                            <input type="text" name="lastName" ng-model="ctrl.customer.lastName" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }" required>
+                            <div ng-messages="ctrl.paymentForm.lastName.$error" ng-if="ctrl.paymentForm.lastName.$touched" md-auto-hide="false">
+                                <div ng-message="required" class="error-message">Este campo es requerido</div>
+                            </div>
                         </div>
                     </div>
                     <div class="sctn-row">
                         <div class="sctn-col l">
                             <label>Correo electrónico</label>
-                            <input type="email" name="email" ng-model="ctrl.customer.email" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }">
+                            <input type="email" name="email" ng-model="ctrl.customer.email" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }" required>
+                            <div ng-messages="ctrl.paymentForm.email.$error" ng-if="ctrl.paymentForm.email.$touched" md-auto-hide="false">
+                                <div ng-message="required" class="error-message">Este campo es requerido</div>
+                                <div ng-message="email" class="error-message">El correo electrónico es inválido</div>
+                            </div>
                         </div>
                         <div class="sctn-col">
                             <label>Teléfono</label>
-                            <input type="phone" name="phone_number" ng-model="ctrl.customer.phone" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }">
+                            <input type="phone" name="phone" placeholder="10 dígitos" ng-model="ctrl.customer.phone" ng-disabled="ctrl.loading" ng-class="{ 'disabled': ctrl.loading }" ng-pattern="/^[0-9]{10}$/" required>
+                            <div ng-messages="ctrl.paymentForm.phone.$error" ng-if="ctrl.paymentForm.phone.$touched" md-auto-hide="false">
+                                <div ng-message="required" class="error-message">Este campo es requerido</div>
+                                <div ng-message="pattern" class="error-message">El teléfono es inválido</div>
+                            </div>
                         </div>
                     </div>
                     <div class="sctn-row">
