Corrección de estilos

--- a/aparta-tu-consulta.html
+++ b/aparta-tu-consulta.html
@@ -73,7 +73,7 @@
     </div>
 </div>
 <div id="container">
-    <div id="wb_pagosImage1" style="margin-left:70px;margin-top:0px;width:1232px;height:616px;z-index:9;">
+    <div id="wb_pagosImage1" style="margin:auto;margin-top:0px;width:1232px;height:616px;z-index:9;">
         <img src="images/pagos-header.jpg" id="pagosImage1" alt="dieta para perder peso">
     </div>
 </div>
