--- a/aparta-tu-consulta.html
+++ b/aparta-tu-consulta.html
@@ -25,6 +25,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/components/payments/payments.service.js"></script>
     <script src="app/components/payments/payments.controller.js"></script>
+    <script src="app/shared/directives/amount-check.directive.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
@@ -148,10 +149,11 @@
                     <div class="sctn-row">
                         <div class="sctn-col l">
                             <label>Monto</label>
-                            <span style="padding-top: 14px;">$ </span><input type="text" name="amount" ng-model="ctrl.paymentData.amount" ng-pattern="/^[0-9]*(?:\.[0-9]{2})?$/" ng-disabled="ctrl.disablePaymentDescription() || ctrl.loading" ng-class="{ 'disabled': ctrl.disablePaymentDescription() || ctrl.loading }" required>
+                            <span style="padding-top: 14px;">$ </span><input type="text" name="amount" ng-model="ctrl.paymentData.amount" ng-pattern="/^[0-9]*(?:\.[0-9]{1,2})?$/" ng-disabled="ctrl.disablePaymentDescription() || ctrl.loading" ng-class="{ 'disabled': ctrl.disablePaymentDescription() || ctrl.loading }" maxvalue required>
                             <div ng-messages="ctrl.customerForm.amount.$error" ng-if="ctrl.customerForm.amount.$touched || ctrl.submitted" md-auto-hide="false">
                                 <div ng-message="required" class="error-message">Este campo es requerido</div>
                                 <div ng-message="pattern" class="error-message">El monto debe tener un formato numérico (sin comas)</div>
+                                <div ng-message="maxvalue" class="error-message">El monto no puede exceder los $5000.00</div>
                             </div>
                         </div>
                         <div class="sctn-col">
@@ -302,6 +304,8 @@
                 <li><a href="./AVISO_LEGAL.pdf" target="_blank">Aviso&nbsp;Legal</a>
                 </li>
                 <li><a href="./AVISO_DE_PRIVACIDAD.pdf" target="_blank">Aviso&nbsp;de&nbsp;Privacidad</a>
+                </li>
+                <li><a href="./TERMINOS_Y_CONDICIONES_DE_USO.pdf" target="_blank">Términos y Condiciones de Uso</a>
                 </li>
             </ul>
             <br>
