--- a/aparta-tu-consulta.html
+++ b/aparta-tu-consulta.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Language" content="es-mx">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=1300px">
     <title>VIME | Pagos</title>
     <meta name="description" content="Conoce sobre nuestra clínica, nuestros especialistas y nuestro método efecto para reducir peso en semanas. Te ofrecemos una solución definitiva y duradera">
     <meta name="keywords" content="metodo bajar kilos, doctor bajar peso, clinica df perder peso, bajar peso en semanas, que es vime, metodo vime">
@@ -53,7 +54,7 @@
     <div id="masterLayer2_Container" style="width:1300px;position:relative;margin-left:auto;margin-right:auto;text-align:left;">
         <div id="wb_logovime" style="position:absolute;left:50px;top:14px;width:300px;height:98px;z-index:7;">
             <a href="./index.html"><img src="images/Vime_logo.png" id="logovime" alt="VIME - Cl&#237;nica para bajar de peso"></a></div>
-        <div id="wb_masterCssMenu1" style="position:absolute;left:518px;top:84px;width:800px;height:28px;z-index:8;">
+        <div id="wb_masterCssMenu1" style="position:absolute;left:518px;top:84px;width:740px;height:28px;z-index:8;">
             <ul>
                 <li class="firstmain"><a href="./index.html" target="_self">Inicio</a>
                 </li>
